update crawl event